election sorta works